--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.9",
+    "html5-file-selector": "^2.1.0",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.2.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "save-html-as-image": "^1.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
