--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dom-to-image": "^2.6.0",
     "ethers": "^5.6.9",
+    "html-to-image": "^1.9.0",
     "html5-file-selector": "^2.1.0",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
@@ -26,7 +28,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "save-html-as-image": "^1.7.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3.storage": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
