--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "alchemy-sdk": "^2.4.0",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "ethers": "^5.7.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^4.0.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
