--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +17,7 @@
     "alchemy-sdk": "^2.4.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
+    "country-state-city": "^3.1.2",
     "ethers": "^5.7.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^4.0.0",
